@@ -306,6 +306,12 @@ _pic14_do_link (void)
     exit (1);
 }
 
+static const char *
+get_model (void)
+{
+  return "pic";
+}
+
 /* Globals */
 PORT pic_port =
 {
@@ -315,9 +321,10 @@ PORT pic_port =
   "",               /* Processor */
   {
     picglue,
-    TRUE,     /* Emit glue around main */
-    MODEL_SMALL | MODEL_LARGE | MODEL_FLAT24,
-    MODEL_SMALL
+    TRUE,           /* Emit glue around main */
+    NO_MODEL,
+    NO_MODEL,
+    get_model,
   },
   {
     _asmCmd,
